# physically-based-rendering

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  build_clean.sh  mjolnir3DS.3DS  mjolnirOBJ.mtl  run.sh  shader.frag  shader.vert
include/: app_state.h  camera.h  input_handler.h  mesh.h  model.h  shader.h
include/glad/: glad.h
src/: camera.cpp  glad.c  main.cpp  mesh.cpp  model.cpp  shader.cpp
